2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/winlib/WIN32FontInfo.m:
	Use DEFAULT_QUALITY for fonts instead of ANTIALISED_QUALITY.

	ANTIALISED_QUALITY forces small text to be non-antialised,
	which looks out of place compared with most Windows apps.

2010-04-15 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_create.m:
	Use the default icon size when loading the app ico file
	Otherwise, the first icon in the file would be used.

2010-04-14 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

  * Source/win32/WIN32Server.m:  Have non-key, non-main windows 
  that order front not become active.  Also don't bring windows
  that are ordering out to the foreground first.

2010-03-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m,
	* Source/art/ftfont-old.m,
	* Source/xlib/XGGState.m: Add more missing imports.

2010-03-25 Riccardo Mottola <rmottola@users.sf.net>

	* Source/gsc/GSGState.m: import NSValue, include -> import
	* Source/xlib/XGGState.m: added missing imports

2010-03-24 Doug Simons <doug.simons@testplant.com>

	* Source/winlib/WIN32FontInfo.m: Include NSDebug.h for
	definition of NSDebugLLog().

2010-03-24 Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m: Ignore duplicate mouse down
	events generated by first click in a window.

2010-03-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/win32/w32_movesize.h:
	* Source/win32/w32_movesize.m:
	* Source/win32/WIN32Server.m: Call displayIfNeeded on
	the window when WM_SIZING is recieved so windows redraw
	while being resized.

2010-03-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Report deltaX and deltaY
	for mouse move events, like OS X does.

2010-03-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Process WM_SYSKEYDOWN
	and WM_SYSKEYUP messages - these are delivered instead
	of normal WM_KEYDOWN and WM_KEYUP messages when the
	ALT key is presesd. (and also F10).
