@@ -1,3 +1,10 @@
+2010-04-20 Doug Simons <doug.simons@testplant.com>
+
+	* Source/win32/WIN32Server.m:
+	Fix problem with key events going to window other than the key window.
+	Block callbacks while setting the foreground window to prevent key/main
+	window changes from cascading in a feedback loop.
+
 2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>
 
 	* Source/winlib/WIN32FontInfo.m:
